# note-worthy

./: .env.example  Cargo.toml
client/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
client/assets/: tailwind.css
client/src/: app.rs  main.rs
client/src/components/: client_list.rs  mod.rs  modal.rs  nav_bar.rs
client/src/handlers/: auth.rs
client/src/models/: mod.rs
client/src/pages/: add_client.rs  clients.rs  home.rs  library.rs  login.rs  mod.rs  not_found.rs  organization.rs  route.rs
client/src/services/: mod.rs
entity/: Cargo.toml
entity/src/: client.rs  client_therapist.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  therapist.rs
migration/src/: lib.rs  m20250630_000001_create_therapist_table.rs  m20250701_182901_create_client_table.rs  m20250701_190743_create_client_therapist_table.rs
models/src/: client.rs  sea_orm_active_enums.rs  therapist.rs
server/: Cargo.toml
server/src/: main.rs  router.rs
server/src/authentication/: jwt.rs
server/src/controllers/: client.rs  mod.rs  therapist.rs
users/: Cargo.toml
users/src/: lib.rs
