[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.1", features = ["web", "router"] }
log = "0.4"
wasm-logger = "0.2"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
