[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
log = "0.4.27"
entity = { path = "../entity" }
migration = { path = "../migration" }
dotenvy = "0.15.7"
